[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/triggers",
    "crates/store",
    "crates/executors",
    "crates/pyext",
    "crates/daemon",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Akshan Krithick"]
repository = "https://github.com/akshankrithick/apscheduler-rs"
description = "A high-performance APScheduler-compatible scheduler runtime for Python, powered by Rust"

[workspace.dependencies]
# Core
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = { version = "0.10", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async
async-trait = "0.1"
futures = "0.3"

# Logging/Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Python bindings
pyo3 = { version = "0.23", features = ["extension-module", "chrono", "anyhow", "py-clone"] }

# Data structures
dashmap = "6"
priority-queue = "2"
parking_lot = "0.12"
crossbeam-channel = "0.5"

# Persistence
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "postgres", "mysql", "any", "chrono", "uuid", "json"] }

# Redis
redis = { version = "0.27", features = ["aio", "tokio-comp", "connection-manager"] }

# Serialization
bincode = "1"
ciborium = "0.2"

# Testing
proptest = "1"
criterion = { version = "0.5", features = ["async_tokio"] }
tempfile = "3"
