[package]
name = "apsched-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Core scheduler engine for apscheduler-rs"

[dependencies]
tokio = { workspace = true }
chrono = { workspace = true }
chrono-tz = { workspace = true }
uuid = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
dashmap = { workspace = true }
parking_lot = { workspace = true }
crossbeam-channel = { workspace = true }
bincode = { workspace = true }
ciborium = { workspace = true }
rand = "0.8"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
proptest = { workspace = true }
tempfile = { workspace = true }
