[package]
name = "apscheduler-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Standalone APScheduler daemon binary with HTTP admin API"

[[bin]]
name = "apscheduler-daemon"
path = "src/main.rs"

[dependencies]
apsched-core = { path = "../core" }
apsched-triggers = { path = "../triggers" }
apsched-store = { path = "../store" }
apsched-executors = { path = "../executors" }
tokio = { workspace = true }
chrono = { workspace = true }
chrono-tz = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { version = "4", features = ["derive"] }
axum = "0.8"
tower-http = { version = "0.6", features = ["cors", "trace"] }
uuid = { workspace = true }
anyhow = { workspace = true }
dashmap = { workspace = true }
reqwest = { version = "0.12", features = ["json"] }
