[package]
name = "apsched-executors"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Executor implementations for apscheduler-rs"

[dependencies]
apsched-core = { path = "../core" }
chrono = { workspace = true }
uuid = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
crossbeam-channel = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
