[package]
name = "apsched-store"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Job store implementations for apscheduler-rs"

[dependencies]
apsched-core = { path = "../core" }
chrono = { workspace = true }
chrono-tz = { workspace = true }
uuid = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
dashmap = { workspace = true }
parking_lot = { workspace = true }
sqlx = { workspace = true }
redis = { workspace = true }
mongodb = { workspace = true }
bson = { workspace = true }
futures = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
tempfile = { workspace = true }
