[package]
name = "apsched-triggers"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Trigger implementations for apscheduler-rs"

[dependencies]
apsched-core = { path = "../core" }
chrono = { workspace = true }
chrono-tz = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
rand = "0.8"

[dev-dependencies]
proptest = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }
